quick fix to app.component.html

--- a/demo/app.component.html
+++ b/demo/app.component.html
@@ -1043,6 +1043,7 @@
       <div *ngIf="chart.options.includes('smallSegments')">
           <label>Number of small segments:</label><br />
           <input type="number" [(ngModel)]="gaugeSmallSegments"><br />
+      </div>
       <div *ngIf="chart.options.includes('displayValue')">
           <label>Display value: </label><br />
           <input type="text" [(ngModel)]="radialGaugeDisplayValue"><br />
