--- a/demo/app.component.html
+++ b/demo/app.component.html
@@ -39,6 +39,8 @@
         [gradient]="gradient"
         [xAxis]="showXAxis"
         [yAxis]="showYAxis"
+        [xAxisTicks]="[10, 20, 30, 345, 5000, 10000, 40000]"
+        [yAxisTicks]="['Germany', 'Spain']"
         [legend]="showLegend"
         [legendTitle]="legendTitle"
         [showXAxisLabel]="showXAxisLabel"
