added showValueLabel for heatmap

--- a/demo/app.component.html
+++ b/demo/app.component.html
@@ -475,6 +475,8 @@
         [yAxis]="showYAxis"
         [showXAxisLabel]="showXAxisLabel"
         [showYAxisLabel]="showYAxisLabel"
+        [showValueLabel]="true"
+        [valueFormatting]="moneyFormatting"
         [xAxisLabel]="xAxisLabel"
         [yAxisLabel]="yAxisLabel"
         [innerPadding]="innerPadding"
