Add bar max-width for vertical bar-chart

--- a/demo/app.component.html
+++ b/demo/app.component.html
@@ -26,6 +26,7 @@
         [roundEdges]="roundEdges"
         [yScaleMax]="yScaleMax"
         [showDataLabel]="showDataLabel"
+		[barMaxWidth]="barMaxWidth"
         (select)="select($event)"
         (legendLabelClick)="onLegendLabelClick($event)">
       </ngx-charts-bar-vertical>
