--- a/demo/app.component.html
+++ b/demo/app.component.html
@@ -532,6 +532,8 @@
         [scheme]="colorScheme"
         cardColor="#232837"
         emptyColor="#1e222e"
+        [innerPadding]="innerPadding"
+        [borderRadius]="borderRadius"
         [results]="single"
         [animations]="animations"
         (select)="select($event)">
@@ -1126,7 +1128,11 @@
       </div>
       <div *ngIf="chart.options.includes('innerPadding')">
         <label>Inner padding value:</label><br />
-        <input type="text" [(ngModel)]="innerPadding" min="0" step="1"><br />
+        <input type="text" [(ngModel)]="innerPadding"><br />
+      </div>
+      <div *ngIf="chart.options.includes('borderRadius')">
+        <label>Border radius value:</label><br />
+        <input type="text" [(ngModel)]="borderRadius"><br />
       </div>
       <div *ngIf="chart.options.includes('barPadding')">
         <label>Padding between bars:</label><br />
