--- a/src/number-card/card.component.scss
+++ b/src/number-card/card.component.scss
@@ -12,8 +12,9 @@ ngx-charts-number-card {
         white-space: nowrap;
         text-overflow: ellipsis;
         width: 100%;
-        padding: 0;
+        padding: 0 0 0.1em 0;
         margin: 0;
+        text-align: center;
       }
     }
 
