Improve card resizing

--- a/demo/app.component.html
+++ b/demo/app.component.html
@@ -567,6 +567,8 @@
           emptyColor="#1e222e"
           [results]="statusData"
           [animations]="animations"
+          [innerPadding]="innerPadding"
+          [borderRadius]="borderRadius"
           [valueFormatting]="statusValueFormat"
           [labelFormatting]="statusLabelFormat">
         </ngx-charts-number-card>
