Added optional upper boundary stroke for area sections in area charts

--- a/src/common/base-chart.component.scss
+++ b/src/common/base-chart.component.scss
@@ -109,4 +109,18 @@
     }
   }
 
+  .ngx-charts-area-boundary {
+    opacity: 0;
+    stroke-width: 2;
+    animation-name: animateStroke;
+    animation-duration: 0.4s;
+    animation-iteration-count: 1;
+    animation-delay: 1s;
+    animation-fill-mode: forwards;
+  }
+
+  @keyframes animateStroke {
+    from {opacity:0}
+    to {opacity:1}
+  }
 }
