advanced pie chart trimLabels feature
advanced pie chart trimLabels feature

--- a/demo/app.component.html
+++ b/demo/app.component.html
@@ -233,6 +233,7 @@
         [explodeSlices]="explodeSlices"
         [labels]="showLabels"
         [doughnut]="doughnut"
+        [trimLabels]="false"
         [arcWidth]="arcWidth"
         (legendLabelClick)="onLegendLabelClick($event)"
         [gradient]="gradient"
@@ -245,6 +246,7 @@
         *ngIf="chartType === 'advanced-pie-chart'"
         class="chart-container"
         [view]="view"
+        [trimLabels]="false"
         [scheme]="colorScheme"
         [results]="single"
         [valueFormatting]="valueFormatting"
