--- a/demo/app.component.html
+++ b/demo/app.component.html
@@ -26,6 +26,7 @@
         [roundDomains]="roundDomains"
         [roundEdges]="roundEdges"
         [yScaleMax]="yScaleMax"
+        [noBarWhenZero]="noBarWhenZero"
         [showDataLabel]="showDataLabel"
         (select)="select($event)"
         (legendLabelClick)="onLegendLabelClick($event)">
@@ -54,6 +55,7 @@
         [roundDomains]="roundDomains"
         [roundEdges]="roundEdges"
         [xScaleMax]="xScaleMax"
+        [noBarWhenZero]="noBarWhenZero"
         [showDataLabel]="showDataLabel"
         (legendLabelClick)="onLegendLabelClick($event)"
         (select)="select($event)">
@@ -84,6 +86,7 @@
         [roundDomains]="roundDomains"
         [roundEdges]="roundEdges"
         [yScaleMax]="yScaleMax"
+        [noBarWhenZero]="noBarWhenZero"
         [showDataLabel]="showDataLabel"
         (select)="select($event)">
       </ngx-charts-bar-vertical-2d>
@@ -113,6 +116,7 @@
         [roundDomains]="roundDomains"
         [roundEdges]="roundEdges"
         [xScaleMax]="xScaleMax"
+        [noBarWhenZero]="noBarWhenZero"
         [showDataLabel]="showDataLabel"
         (select)="select($event)">
       </ngx-charts-bar-horizontal-2d>
@@ -140,6 +144,7 @@
         [barPadding]="barPadding"
         [roundDomains]="roundDomains"
         [yScaleMax]="yScaleMax"
+        [noBarWhenZero]="noBarWhenZero"
         [showDataLabel]="showDataLabel"
         (select)="select($event)">
       </ngx-charts-bar-vertical-stacked>
@@ -168,6 +173,7 @@
         [roundDomains]="roundDomains"
         [showDataLabel]="showDataLabel"
         [xScaleMax]="xScaleMax"
+        [noBarWhenZero]="noBarWhenZero"
         (select)="select($event)">
       </ngx-charts-bar-horizontal-stacked>
       <ngx-charts-bar-vertical-normalized
@@ -193,6 +199,7 @@
         [showGridLines]="showGridLines"
         [barPadding]="barPadding"
         [roundDomains]="roundDomains"
+        [noBarWhenZero]="noBarWhenZero"
         (select)="select($event)">
       </ngx-charts-bar-vertical-normalized>
       <ngx-charts-bar-horizontal-normalized
@@ -218,6 +225,7 @@
         [showGridLines]="showGridLines"
         [barPadding]="barPadding"
         [roundDomains]="roundDomains"
+        [noBarWhenZero]="noBarWhenZero"
         (select)="select($event)">
       </ngx-charts-bar-horizontal-normalized>
       <ngx-charts-pie-chart
@@ -484,6 +492,7 @@
         [xAxisLabel]="xAxisLabel"
         [yAxisLabel]="yAxisLabel"
         [yAxisLabelRight]="yAxisLabelRight"
+        [noBarWhenZero]="noBarWhenZero"
         (select)="onSelect($event)">
       </combo-chart-component>
       <ngx-charts-heat-map
@@ -808,6 +817,7 @@
         [xAxisLabel]="xAxisLabel"
         [yAxisLabel]="'Executions'"
         [showGridLines]="showGridLines"
+        [noBarWhenZero]="noBarWhenZero"
         (onFilter)="onFilter($event)">
       </ngx-charts-timeline-filter-bar-chart>
     </div>
@@ -834,6 +844,7 @@
       [showGridLines]="showGridLines"
       [barPadding]="barPadding"
       [roundDomains]="roundDomains"
+      [noBarWhenZero]="noBarWhenZero"
       [yScaleMax]="yScaleMax"
       [showDataLabel]="showDataLabel"
       (select)="select($event)">
@@ -861,6 +872,7 @@
       [showGridLines]="showGridLines"
       [barPadding]="barPadding"
       [roundDomains]="roundDomains"
+      [noBarWhenZero]="noBarWhenZero"
       [showDataLabel]="showDataLabel"
       (select)="select($event)">
     </ngx-charts-bar-horizontal-stacked>
@@ -908,6 +920,7 @@
         <pre *ngIf="chart.inputFormat === 'bubble'">{{bubble | json}}</pre>
         <pre *ngIf="chart.inputFormat === 'comboChart'">{{barChart | json}}</pre>
         <pre *ngIf="chart.inputFormat === 'comboChart'">{{lineChartSeries | json}}</pre>
+        <pre *ngIf="chart.inputFormat === 'timelineFilter'">{{timelineFilterBarData | json}}</pre>
         <div>
           <label>
             <input type="checkbox" [checked]="realTimeData" (change)="realTimeData = $event.target.checked">
@@ -1031,6 +1044,12 @@
             Use Gradients
           </label> <br/>
         </div>
+        <div *ngIf="chart.options.includes('noBarWhenZero')">
+          <label>
+            <input type="checkbox" [checked]="noBarWhenZero" (change)="noBarWhenZero = $event.target.checked">
+            Hide bar if value is 0
+          </label> <br/>
+        </div>        
         <div *ngIf="chart.options.includes('showLegend')">
           <label>
             <input type="checkbox" [checked]="showLegend" (change)="showLegend = $event.target.checked">
