added on hover functionality for icon with icon label

--- a/demo/app.component.scss
+++ b/demo/app.component.scss
@@ -315,4 +315,8 @@ main {
     color: $color-text-med;
   }
 
+  .line-chart-icon-label {
+    fill: #fff !important;
+    font-size: 0.6em;
+  }
 }
