edited x-axis label and values for line-chart-with-icons demo

--- a/demo/app.component.html
+++ b/demo/app.component.html
@@ -383,7 +383,7 @@
         [yAxis]="showYAxis"
         [showXAxisLabel]="showXAxisLabel"
         [showYAxisLabel]="showYAxisLabel"
-        [xAxisLabel]="xAxisLabel"
+        [xAxisLabel]="'Time'"
         [yAxisLabel]="yAxisLabel"
         [autoScale]="false"
         [xScaleMin]="xScaleMin"
