--- a/demo/app.component.html
+++ b/demo/app.component.html
@@ -1024,11 +1024,13 @@
         <pre *ngIf="chart.inputFormat === 'singleSeries'">{{single | json}}</pre>
         <pre *ngIf="chart.inputFormat === 'multiSeries' && !linearScale">{{multi | json}}</pre>
         <pre *ngIf="chart.inputFormat === 'multiSeriesNegative' && !linearScale">{{fiscalYearReport | json}}</pre>
-        <pre *ngIf="chart.inputFormat === 'multiSeries' && linearScale && (!range)">{{dateData | json}}</pre>
+        <pre *ngIf="chart.inputFormat === 'multiSeries' && linearScale && (!range) && chartType != 'line-chart-with-icons'">{{dateData | json}}</pre>
         <pre *ngIf="chart.inputFormat === 'multiSeries' && linearScale && range">{{dateDataWithRange | json}}</pre>
         <pre *ngIf="chart.inputFormat === 'bubble'">{{bubble | json}}</pre>
         <pre *ngIf="chart.inputFormat === 'comboChart'">{{barChart | json}}</pre>
         <pre *ngIf="chart.inputFormat === 'comboChart'">{{lineChartSeries | json}}</pre>
+        <pre *ngIf="chart.inputFormat === 'multiSeries' && chartType === 'line-chart-with-icons'">{{lineChartWithIconsData | json}}</pre>
+        <pre *ngIf="chart.inputFormat === 'multiSeries' && chartType === 'line-chart-with-icons'">{{lineChartWithIconsIcons | json}}</pre>
         <div>
           <label>
             <input type="checkbox" [checked]="realTimeData" (change)="realTimeData = $event.target.checked">
