--- a/demo/app.component.html
+++ b/demo/app.component.html
@@ -842,6 +842,46 @@
         >
         </ngx-charts-tree-map>
       </div>
+      <div
+        class="chart-container"
+        *ngIf="chartType === 'bubble-chart-interactive-demo'"
+        style="padding: 10px; border: 1px solid white;"
+      >
+        <div>
+          <span class="active">{{ getBubbleInteractiveTitle() }}</span>
+          <button
+            *ngIf="bubbleShowDrilldownResetLink()"
+            class="btn btn-link"
+            style="float: right;"
+            (click)="onClickResetBubbleInteractiveDrill()"
+          >
+            <span>Go Back</span>
+          </button>
+        </div>
+        <ngx-charts-bubble-chart-interactive
+          [view]="view"
+          [results]="bubbleDemoTempData"
+          [animations]="animations"
+          [showGridLines]="showGridLines"
+          [legend]="showLegend"
+          [legendTitle]="legendTitle"
+          [xAxis]="showXAxis"
+          [yAxis]="showYAxis"
+          [showXAxisLabel]="showXAxisLabel"
+          [showYAxisLabel]="showYAxisLabel"
+          [xAxisLabel]="xAxisLabel"
+          [yAxisLabel]="yAxisLabel"
+          [autoScale]="autoScale"
+          [scheme]="colorScheme"
+          [schemeType]="schemeType"
+          [roundDomains]="roundDomains"
+          [tooltipDisabled]="tooltipDisabled"
+          [minRadius]="minRadius"
+          [maxRadius]="maxRadius"
+          (select)="onSelectBubbleInteractivePoint($event)"
+        >
+        </ngx-charts-bubble-chart-interactive>
+      </div>
       <ngx-charts-line-chart
         *ngIf="chartType === 'line-reference-lines'"
         [view]="view"
@@ -1043,6 +1083,7 @@
         <pre *ngIf="chart.inputFormat === 'multiSeries' && linearScale && !range">{{ dateData | json }}</pre>
         <pre *ngIf="chart.inputFormat === 'multiSeries' && linearScale && range">{{ dateDataWithRange | json }}</pre>
         <pre *ngIf="chart.inputFormat === 'bubble'">{{ bubble | json }}</pre>
+        <pre *ngIf="chart.inputFormat === 'bubbleInteractive'">{{ bubbleDemoTempData | json }}</pre>
         <pre *ngIf="chart.inputFormat === 'comboChart'">{{ barChart | json }}</pre>
         <pre *ngIf="chart.inputFormat === 'comboChart'">{{ lineChartSeries | json }}</pre>
         <div>
@@ -1165,9 +1206,10 @@
         </div>
         <div *ngIf="chart.options.includes('rotateXAxisTicks')">
           <label>
-            <input type="checkbox" [checked]="rotateXAxisTicks" (change)="rotateXAxisTicks = $event.target.checked">
+            <input type="checkbox" [checked]="rotateXAxisTicks" (change)="rotateXAxisTicks = $event.target.checked" />
             Rotate X Axis Ticks
-          </label> <br/>
+          </label>
+          <br />
         </div>
         <div *ngIf="chart.options.includes('gradient')">
           <label>
