change hidebar info to one time property for performance

--- a/demo/app.component.html
+++ b/demo/app.component.html
@@ -1099,6 +1099,7 @@
         <pre *ngIf="chart.inputFormat === 'bubbleInteractive'">{{ bubbleDemoTempData | json }}</pre>
         <pre *ngIf="chart.inputFormat === 'comboChart'">{{ barChart | json }}</pre>
         <pre *ngIf="chart.inputFormat === 'comboChart'">{{ lineChartSeries | json }}</pre>
+        <pre *ngIf="chart.inputFormat === 'timelineFilter'">{{timelineFilterBarData | json}}</pre>
         <div>
           <label>
             <input type="checkbox" [checked]="realTimeData" (change)="realTimeData = $event.target.checked" />
