Added seriesTooltipDisabled Input for area-chart component

--- a/demo/app.component.html
+++ b/demo/app.component.html
@@ -510,6 +510,7 @@
         [roundDomains]="roundDomains"
         [curve]="curve"
         [tooltipDisabled]="tooltipDisabled"
+        [seriesTooltipDisabled]="seriesTooltipDisabled"
         [trimXAxisTicks]="trimXAxisTicks"
         [trimYAxisTicks]="trimYAxisTicks"
         [rotateXAxisTicks]="rotateXAxisTicks"
