Added to normalized and stacked chart the seriesTooltipDisabled Input

--- a/demo/app.component.html
+++ b/demo/app.component.html
@@ -547,6 +547,7 @@
         [yScaleMax]="yScaleMax"
         [showGridLines]="showGridLines"
         [roundDomains]="roundDomains"
+        [seriesTooltipDisabled]="seriesTooltipDisabled"
         [tooltipDisabled]="tooltipDisabled"
         [curve]="curve"
         [trimXAxisTicks]="trimXAxisTicks"
@@ -581,6 +582,7 @@
         [timeline]="timeline"
         [showGridLines]="showGridLines"
         [roundDomains]="roundDomains"
+        [seriesTooltipDisabled]="seriesTooltipDisabled"
         [tooltipDisabled]="tooltipDisabled"
         [curve]="curve"
         [trimXAxisTicks]="trimXAxisTicks"
