Added enum ColorScheme and IShapeCircle Model along with typings on bubble chart and color helper

--- a/demo/app.component.html
+++ b/demo/app.component.html
@@ -453,6 +453,7 @@
         [rotateXAxisTicks]="rotateXAxisTicks"
         [maxXAxisTickLength]="maxXAxisTickLength"
         [maxYAxisTickLength]="maxYAxisTickLength"
+        [customColors]="customColors"
         (activate)="activate($event)"
         (deactivate)="deactivate($event)"
         (select)="select($event)"
