Minor fix to handle legend mouse events on bubble chart with activeEntries and added to app demo

--- a/demo/app.component.html
+++ b/demo/app.component.html
@@ -426,6 +426,7 @@
         [view]="view"
         class="chart-container"
         [results]="bubble"
+        [activeEntries]="bubbleActiveEntries"
         [animations]="animations"
         [showGridLines]="showGridLines"
         [legend]="showLegend"
