--- a/demo/app.component.html
+++ b/demo/app.component.html
@@ -712,6 +712,19 @@
         (deactivate)="deactivate($event)"
       >
       </ngx-charts-number-card>
+      <ngx-charts-box-chart
+        *ngIf="chartType === 'box-plot'"
+        class="chart-container"
+        [view]="view"
+        [scheme]="colorScheme"
+        [results]="multi"
+        [animations]="animations"
+        (legendLabelClick)="onLegendLabelClick($event)"
+        (select)="select($event)"
+        (activate)="activate($event)"
+        (deactivate)="deactivate($event)"
+      >
+      </ngx-charts-box-chart>
       <div *ngIf="chartType === 'status-demo'">
         <ngx-slider
           [(ngModel)]="salePrice"
