Add BoxChart Model and set axis domains on box chart component

--- a/demo/app.component.html
+++ b/demo/app.component.html
@@ -717,7 +717,7 @@
         class="chart-container"
         [view]="view"
         [scheme]="colorScheme"
-        [results]="multi"
+        [results]="boxData"
         [animations]="animations"
         (legendLabelClick)="onLegendLabelClick($event)"
         (select)="select($event)"
